# site-card

./: .dockerignore  .env.example  .gitignore  .gitmodules  AUTHORS.md  Containerfile  Gemfile  LICENSE  README.md  Rakefile  TODO.md  build.sh  compose.yml  config.ru  entrypoint.sh  vite.config.js
app/controllers/: admin_controller.rb  application_controller.rb  form_handler.rb
app/models/: about.rb  career.rb  contact.rb  portfolio_language.rb  portfolio_tech_badge.rb  skill.rb
app/views/: renderer.rb
config/: content.yml  nginx.conf
config/initializers/: app_config.rb  pg_repository.rb
db/: init_pg.sql
key/: .env.example  Containerfile  generate_key.sh  main.rb  test.sh
key/src/: errors.rb  key_validator.rb  main.rb  pqc_provider.rb
lib/: errors.rb
proto/: service.proto
public/: 403.html  404.html  500.html  502.html  504.html  error.html  index.html
services/app-service/: Containerfile  Gemfile  README.md  Rakefile  config.ru  entrypoint.sh  (+2 more)
services/notification-bot/: Containerfile  README.md  entrypoint.sh  pyproject.toml
services/notification-bot/src/: config.py  errors.py  logger.py  main.py
services/notification-bot/src/api/: __init__.py  server.py
services/notification-bot/src/bot/: __init__.py  builder.py  commands.py  start.py
services/notification-bot/src/bot/commands/: __init__.py  about.py  logout.py  start.py  status.py
services/notification-bot/src/bot/fsm/: __init__.py  auth.py
services/notification-bot/src/clients/: __init__.py  db.py
services/notification-bot/src/handlers/: __init__.py  auth.py  notification.py
(+175 files in other folders)
